tests/negative/cycle_a.lu
require "godot"
require "cycle_b"

class CycleA
end
